Added Slide Content

--- a/static/html/slides.html
+++ b/static/html/slides.html
@@ -222,11 +222,24 @@
 			</div>
 		</div>
 	</section>
-	<section>
-	\(R'_{HK}\)
+	<section data-auto-animate>
+		<p>\(R'_{HK}\)<p>
 	</section>
-	<section>
-	<h1 id="titulo" class="fragment animated move-to-middle-top">Middle Top</h1>
+	<section data-auto-animate>
+		<p>\(R'_{HK}\)<p>
+		<div class="multiCol">
+			<div class="col" style="vertical-align:middle">
+				\[
+					\begin{aligned}
+						R'_{HK} &= \lambda C_{cf}S - R_{phot} \\
+						\lambda &\equiv 1.887\times 10^{-4}
+					\end{aligned}
+				\]
+			</div>
+			<div class="col">
+				<p style="display: list-item;">Bolometric Flux Normalized Transformation of S-Index</p>
+			</div>
+		</div>
 	</section>
 	
 </section>
