--- a/static/html/slides.html
+++ b/static/html/slides.html
@@ -186,11 +186,11 @@
 	<section data-auto-animate>
 		<div class="slideTitle">Ca II H&K Emission</div> 
 		<div class="multiCol">
-			<div class="col">
-				<img style="vertical-align: middle;" src="static/imgs/SIndexBandpass.png" alt="S-Index bandpass" width=600 height=300>
+			<div class="col" style="vertical-align: middle;">
+				<img src="static/imgs/SIndexBandpass.png" alt="S-Index bandpass" width=600 height=300>
 			</div>
-			<div class="col">
-				<p style="vertical-align: middle;"> Narrow emission superimposed on broad absorbtion</p> 
+			<div class="col" style="vertical-align: middle;">
+				<p> Narrow emission superimposed on broad absorbtion</p> 
 			</div>
 		</div>
 	</section>
@@ -241,15 +241,96 @@
 			</div>
 		</div>
 	</section>
+	<section>
+		<img data-id="rotfigure" src="static/imgs/SeperateRsbyRpHK.png" alt="Simple Rotation Activity Relation" width=857 height=600>	
+	</section>
 	
 </section>
 
-<section>Outline</section>
+<section>
+	<p style="text-align:left">Outline</p>					
+	<div class='multiCol'>
+		<div class='col'>
+			<ul>
+				<li style="opacity: 20%">Background</li>
+				<li style="opacity: 100%">Observations and Data</li>
+				<li style="opacity: 20%">Analysis</li>
+				<li style="opacity: 20%">Results</li>
+			</ul>
+		</div>
+	</div>
+</section>
 
-<section>Data</section>
+<section>
+	<section data-auto-animate>
+		<p>Target Selection</p>
+	</section>
+	<section data-auto-animate>
+		<p>Target Selection</p>
+		<div class="multiCol">
+			<div class="col">
+				<p class="listParLeft"> Fifty M-dwarfs selected from the MEarth survey </p>
+				<p class="listParLeft fragment"> Selected for: </p>
+				<p class="fragment">     - High Proper Motion</p>
+				<p class="fragment">     - Measured Photometric Rotational Periods</p>
+			</div>
+			<div class="col" style="vertical-align:middle">
+				<img src="static/imgs/MEarth.png" alt="MEarth Logo" width=207 height=207>	
+			</div>
+		</div>
+	</section>
+	<section data-auto-animate>
+		<p>MIKE Observations</p>
+	</section>
+	<section data-auto-animate>
+		<p>MIKE Observations</p>
+		<div class="multiCol">
+			<div class="col">
+				<p class="listParLeft"> High Resolution Echell Spectrograph</p>
+				<p class="listParLeft" style="color:#545454"> Blue (335-500 nm) and red arms (490-950 nm)</p>
+				<p class="listParLeft"> Resolution ~ 32700</p>
+			</div>
+			<div class="fragment col" data-fragment-index="2">
+				<p class="listParLeft" style="color:#545454">Data Reduced With <code>CarPy</code></p> 
+				<p class="listParLeft">Background Subtracted, Blaze Corrected, and Wavelength Calibrated</p> 
+				<p class="listParLeft" style="color:#545454">All Spectra Shifted to the Rest Frame</p> 
+			</div>
+		</div>
+	</section>
+</section>
 
-<section>Outline</section>
+<section>
+	<p style="text-align:left">Outline</p>					
+	<div class='multiCol'>
+		<div class='col'>
+			<ul>
+				<li style="opacity: 20%">Background</li>
+				<li style="opacity: 20%">Observations and Data</li>
+				<li style="opacity: 100%">Analysis</li>
+				<li style="opacity: 20%">Results</li>
+			</ul>
+		</div>
+	</div>
+</section>
 
-<section>Analysis</section>
+<section>
+	<section>
+		The <span class="spanEmph">Rotation-Activity</span> Relation
+	</section>
+	<section>
+		<p> Recall </p>
+		<div class="multiCol">
+			<div class="col" style="vertical-align:middle">
+				<img src="static/imgs/SeperateRsbyRpHK.png" alt="Simple Rotation Activity Relation" width=429 height=300>	
+			</div>
+			<div class="col" style="vertical-align:middle">
+				<img src="static/imgs/SIndexBandpass.png" alt="S-Index bandpass" width=600 height=250>
+			</div>
+		</div>
+	</section>
+	<section>
+		<img src="static/imgs/RpHKvsR0.png" alt="RotationActivityRelation" width=800 height=600>
+	</section>
+</section>
 
 <section>Conclusion</section>
