Added more slides

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 		<script>
 			Reveal.initialize({
 				hash: true,
+				transition: 'fade',
+				backgroundTransition: 'fade',
 				dependencies: [
 					{src: 'node_modules/revealjs-animated/dist/revealjs-animated.js', async: true}
 				],
