--- a/static/html/slides.html
+++ b/static/html/slides.html
@@ -43,11 +43,9 @@
 	</section>
 	<section data-auto-animate>
 		<div data-id="empPoint" class="slideEmph" style="text-align:left">M-dwarfs are <span class="spanEmph">everywhere</span></div>
-		<div class="fragment" style="text-align:left">
-			<ul>
-				<li>Majority of stars</li>
-				<li><span class="fragment">Ideal for planet search campaigns</span></li>
-			</ul>
+		<div style="text-align:left">
+			<p class="listParLeft">Majority of stars (~80% in our Galaxy)</p>
+			<p class="fragment listParLeft">Ideal for planet search campaigns</p>
 		</div>
 	</section>
 
@@ -56,20 +54,21 @@
 		<div class="slideEmph" style="text-align:left">M-dwarfs have excess Magnetic Activity</div>
 		<div class="multiCol">
 			<div class="col">
-				<ul>
-					<li><span class="fragment" data-fragment-index="1">Flaring</span> </li>
-					<li><span class="fragment" data-fragment-index="2">Star Spot Covering Fraction</span> </li>
-					<li><span class="fragment" data-fragment-index="3">Non-thermal emission</span></li>
-				</ul>
+				<p class="fragment listParLeft" data-fragment-index="1">Excess Flairing (X-Ray Flux)</p> 
+				<p class="fragment listParLeft" data-fragment-index="2">Non-thermal emission (Ca II H&K)</p>
+				<p class="fragment listParLeft" data-fragment-index="3">Direct Measurments (Zeeman Broadening)</p>
 			</div>
 			<div class="col" style="position: relative">
 				<span class="fragment fade-in-then-out" data-fragment-index="1">
 					<img src="static/imgs/TheGalacticMDwarfFlareRate.png" alt="M-dwarf Flare Rate" width="400" height="300">
 				</span>
 				<span class="fragment fade-in-then-out" data-fragment-index="2" style="position: absolute; top: 0; left: 0;">
-					<img src="static/imgs/StarSpotCoveringFraction.png" alt="Covering Fraction" width="600" height="300">
+					<img src="static/imgs/NonThermalEmission.png" alt="Non Thermal Emission" width="400" height="400">
 				</span>
 			</div>
+		</div>
+		<div class="footer">
+			<p class="fragment fade-in-then-out credit" data-fragment-index="1">Figure 1, Hilton et al. (2010)</p>
 		</div>
 	</section>
 </section>
@@ -77,11 +76,9 @@
 	<section>
 		<div data-id="title" class="slideTitle">Magnetic Activity In Solar Like (not fully convective) Stars<div>
 		<div class="mutlCol">
-			<div class='col'>
-				<ul>
-					<li> Stars are composed of moving, charged, particles</li>
-					<li> Therefore, magnetic fields exist all throughout a star</li>
-				</ul>
+			<div class='col' style="text-align: left">
+				<p class="listParLeft"> Stars are composed of moving, charged, particles</p>
+				<p class="fragment listParLeft"> Therefore, magnetic fields exist all throughout a star</p>
 			</div>
 			<div class='col'>
 				<img src="static/imgs/Sun_poster.png", alt="Sun Poster", width="300", height="300">
@@ -92,12 +89,48 @@
 		<div class="slideEmph">Randomly Oriented Magnetic Fields Exist Throughout a Star</div>
 	</section>
 	<section>
-		<div class="slideTitle" style="text-align:left">The Tachocline aranges these fields to larger scales</div>
+		<div class="slideEmph">A mechanism <span class="spanEmph">must exist</span> to orient these fields into a similar direction</div>
+	</section>
+	<section data-auto-animate>
+		<div data-id="emphID" class="slideTitle" style="text-align:left">Properties of this mechanism</div>
+	</section>
+	<section data-auto-animate>
+		<div data-id="emphID" class="slideTitle" style="text-align:left">Properties of this mechanism</div>
+		<div class="multiCol">
+			<div class="col">
+				<p class="listParLeft">Stable over long time scales</p>
+			</div>
+			<div class="col">
+				<p class="fragment listParLeft">Compel magnetic fields into a shared orientation</p>
+			</div>
+		</div>
+	</section>
+	<section data-auto-animate>
+		<div data-id="emphID" class="slideTitle" style="text-align:left">Properties of this mechanism</div>
+		<div class="multiCol">
+			<div class="col">
+				<p style="opacity: 50%" class="listParLeft">Stable over long time scales</p>
+			</div>
+			<div class="col">
+				<p style="opacity: 50%" class="listParLeft">Compel magnetic fields into a shared orientation</p>
+			</div>
+		</div>
+		<p>The Tachocline</p>
+	</section>
+	<section>
+		<div class="slideTitle">The Tachocline aranges these (small, randomly oriented) fields to larger scales</div>
+		<p><small>The \( \alpha \Omega \) Dynamo</small></p>
+		<div class="footer">
+			<p class="credit">Parker et al. (1955)</p>
+		</div>
 	</section>
 	<section data-auto-animate>
 		<div style="position: relative">
 			<span stype="position: absolute; top: 0; right: 0;"><img src="static/imgs/TheOmegaEffect.png" alt="Omega Effect" width=400 height=400></span>
 			<span stype="position: absolute; top: 0; right: 0;"><img src="static/imgs/TheAlphaEffect.png" alt="Omega Effect" width=400 height=400></span>
+		</div>
+		<div class="footer">
+			<p class="credit">https://solarscience.msfc.nasa.gov/dynamo.shtml</p>
 		</div>
 	</section>
 	<section data-auto-animate>
@@ -105,11 +138,17 @@
 			<span stype="position: absolute; top: 0; right: 0;"><img src="static/imgs/TheOmegaEffect.png" alt="Omega Effect" width=400 height=400></span>
 			<span stype="position: absolute; top: 0; right: 0;"><img src="static/imgs/TheAlphaEffect.png" alt="Omega Effect" width=400 height=400 style="opacity: 0.25"></span>
 		</div>
+		<div class="footer">
+			<p class="credit">https://solarscience.msfc.nasa.gov/dynamo.shtml</p>
+		</div>
 	</section>
 	<section data-auto-animate>
 		<div style="position: relative">
 			<span stype="position: absolute; top: 0; right: 0;"><img src="static/imgs/TheOmegaEffect.png" alt="Omega Effect" width=400 height=400 style="opacity: 0.25"></span>
 			<span stype="position: absolute; top: 0; right: 0;"><img src="static/imgs/TheAlphaEffect.png" alt="Omega Effect" width=400 height=400></span>
+		</div>
+		<div class="footer">
+			<p class="credit">https://solarscience.msfc.nasa.gov/dynamo.shtml</p>
 		</div>
 	</section>
 </section>
@@ -117,8 +156,17 @@
 	<section>
 		Magnetic Field in Fully Convective Stars
 	</section>
-	<section>
-		M-dwarfs, latter than M4, are <span class="spanEmph">fully convective</span>.
+	<section data-auto-animate>
+		<p>M-dwarfs, latter than M4, are <span class="spanEmph">fully convective</span>.</p>
+	</section>
+	<section data-auto-animate>
+		<p style="opacity:50%">M-dwarfs, latter than M4, are <span class="spanEmph">fully convective</span>.</p>
+		<p>Therefore, they do not have a tachocline</p>
+	</section>
+	<section data-auto-animate>
+		<p style="opacity:50%">M-dwarfs, latter than M4, are <span class="spanEmph">fully convective</span>.</p>
+		<p style="opacity:50%">Therefore, they do not have a tachocline</p>
+		<p >Recall, that they empirically show enhanced magnetic activity.</p>
 	</section>
 	<section>
 		Numerical Models indicate that convective currents and simple rotation are enough to organize small scale fields.	
@@ -129,7 +177,7 @@
 		The <span class="spanEmph">Rotation-Activity</span> Relation
 	</section>
 	<section>
-		Spans a wide range of spectral classes
+		The motion of a chage packets seeds the generation of a magnetic field
 	</section>
 	<section data-auto-animate>
 		<img data-id="rotfigure" src="static/imgs/SimpleRotAct.png" alt="Simple Rotation Activity Relation" width=857 height=600>	
@@ -137,11 +185,14 @@
 	<section data-auto-animate>
 		<img data-id="rotfigure" src="static/imgs/SeperateRotAct.png" alt="Simple Rotation Activity Relation" width=857 height=600>	
 	</section>
+	<section data-transition="fade">
+		<img data-id="rotfigure" src="static/imgs/SimpleRotAct_mass_sep.png" alt="Simple Rotation Activity Relation" width=857 height=600>	
+	</section>
 	<section data-auto-animate>
 		<div class="multiCol">
 			<div class="col">
-				<p>Rotation is not the only contributing factor to the motion of charge!</p>
-				<p class="fragment"> Convective Currents also move charge packets</p>
+				<p class="listParLeft">Rotation is not the only contributing factor to the motion of charge!</p>
+				<p class="fragment listParLeft"> Convective Currents also move charge packets</p>
 			</div>
 			<div class="col">
 				<div style="top:0">
@@ -153,12 +204,25 @@
 	<section data-auto-animate>
 		<div class="multiCol">
 			<div class="col">
-				<p> Rossby Number is formally the ratio of coriolis to interial forces </p>
-				<p class="fragment" data-fragment-index="2"> An observationally useful proxy for this is:<br> <div class=" fragment blockEmph" data-fragment-index="2">The ratio of the rotational period (coriolis) to the convective overturn timescale (inertial)</div></p>
+				<p class="listParLeft">Rotation is not the only contributing factor to the motion of charge!</p>
+				<p class="listParLeft"> Convective Currents also move charge packets</p>
+			</div>
+			<div class="col">
+				<div style="top:0">
+					<img data-id="rotfigure" src="static/imgs/SeperateRotActStrikeThrough.png" alt="Simple Rotation Activity Relation" width=429 height=300>	
+				</div>
+			</div>
+		</div>
+	</section>
+	<section data-auto-animate>
+		<div class="multiCol">
+			<div class="col">
+				<p class="listParLeft"> Rossby Number is formally the ratio of coriolis to interial forces </p>
+				<p class="fragment listParLeft" data-fragment-index="2"> An observationally useful proxy for this is:<br> <div class=" fragment blockEmph" data-fragment-index="2">The ratio of the rotational period (coriolis) to the convective overturn timescale (inertial)</div></p>
 			</div>
 			<div class="col">
 				<div style="top: 0">
-					<img data-id="rotfigure" src="static/imgs/SeperateRotAct.png" alt="Simple Rotation Activity Relation" width=429 height=300>	
+					<img data-id="rotfigure" src="static/imgs/SeperateRotActStrikeThrough.png" alt="Simple Rotation Activity Relation" width=429 height=300>	
 					<div class="fragment" data-fragment-index="2">
 					  \[\begin{aligned}
 					  	Ro = \frac{P_{rot}}{\tau_{c}}
@@ -171,6 +235,45 @@
 	<section>
 				<img data-id="rotfigure" src="static/imgs/SeperateRsbyAct.png" alt="Simple Rotation Activity Relation" width=857 height=600>	
 	</section>
+	<section data-auto-animate>
+		<div class="slideTitle" data-id="Title">Measuring Rotational Period</div>
+	</section>
+	<section data-auto-animate>
+		<div class="slideTitle" data-id="Title">Measuring Rotational Period</div>
+		<div style="position: absolute; height=80%; vertical-align:top;">
+			<div class="multiCol">
+				<div class="col">
+					<img src="static/imgs/result.gif" alt="starSpot" width=600 height=200>
+				</div>
+
+				<div class="col" style="vertical-align:middle">
+					<p class="listParLeft"> Photometric Rotational Periods </p>
+				</div>
+			</div>
+		</div>
+		<div class="footer">
+			<p class="credit">Davenport, James R. A. (2015)</p>
+		</div>
+	</section>
+	<section data-auto-animate>
+		<div class="slideTitle" data-id="Title">Measuring Rossby Number</div>
+	</section>
+	<section data-auto-animate>
+		<div class="slideTitle" data-id="Title">Measuring Rossby Number</div>
+		<div class="multiCol">
+			<div class="col" style="vertical-align:middle;">
+				<p class="listParLeft">Rossby Number includes rotational period <em>and</em> convective over turn time</p>
+				<p class="fragment listParLeft" data-fragment-index="1">Convective Overturn callibrated to remove x offset between stars of different mass / color
+			</div>
+			<div class="col" style="vertical-align:middle;">
+				<div class="fragment" data-fragment-index="1"> \( \log(\tau_{c}) = 0.64 + 0.25(V-K) \)</div>
+			</div>
+		</div>
+		<div class="footer">
+			<p class="credit">Wright et al. (2018)</p>
+		</div>
+	</section>
+	
 </section>
 <section>
 	<section>
@@ -181,28 +284,45 @@
 	</section>
 	<section data-auto-animate>
 		<div class="slideTitle">Ca II H&K Emission</div> 
-		<img src="static/imgs/SIndexBandpass.png" alt="S-Index bandpass" width=900 height=450>
+		<div class="multiCol">
+			<div class="col">
+				<p style="text-align:center"> <small>Ca II K Emission Line </small></p>
+				<img src="static/imgs/NonThermalEmission_K.png" alt="S-Index bandpass" width=400 height=400>
+			</div>
+			<div class="col">
+				<p style="text-align:center"> <small>Ca II H Emission Line </small></p>
+				<img data-id="figure" src="static/imgs/NonThermalEmission_H.png" alt="S-Index bandpass" width=400 height=400>
+			</div>
+		</div>
 	</section>
 	<section data-auto-animate>
 		<div class="slideTitle">Ca II H&K Emission</div> 
 		<div class="multiCol">
 			<div class="col" style="vertical-align: middle;">
-				<img src="static/imgs/SIndexBandpass.png" alt="S-Index bandpass" width=600 height=300>
+				<img data-id="figure" src="static/imgs/NonThermalEmission_H.png" alt="S-Index bandpass" width=600 height=300>
 			</div>
 			<div class="col" style="vertical-align: middle;">
-				<p> Narrow emission superimposed on broad absorbtion</p> 
+				<p> Narrow emission (chromosphere) superimposed on broad absorbtion (photosphere)</p> 
 			</div>
 		</div>
 	</section>
+	<section data-auto-animate>
+		<div data-id="title" class="slideTitle">S-Index!</div>
+	</section>
+	<section data-auto-animate>
+		<div data-id="title" class="slideTitle">S-Index!</div>
+		<p class="listParLeft" style="text-align:left">Ratio of Ca II H&K Emission to contiumn emission</p>
+		<p class="fragment listParLeft" data-fragment-index="1" style="text-align:left">Developed At Mount Wilson in the 1960s for classifiction of the suns magnetic activity</p>
+	</section>
 	<section>
-		S-Index!
+		<img src="static/imgs/SIndexBandpass.png" alt="S Index Bandpass" width=900 height=400>
 	</section>
 	<section>
 		<div class="slideTitle"> S-Index </div>
 		<div class="multiCol">
 			<div class='col'>
-				<p>Ratio of Ca II H&K Emission to contiumn emission</p>
-				<p class="fragment" data-fragment-index="1">Developed At Mount Wilson in the 1960s for classifiction of the suns magnetic activity</p>
+				<p class="listParLeft">Ratio of Ca II H&K Emission to contiumn emission</p>
+				<p class="listParLeft" data-fragment-index="1">Developed At Mount Wilson in the 1960s for classifiction of the suns magnetic activity</p>
 			</div>
 			<div class='col' style="vertical-align:middle">
 				<div class="fragment" data-fragment-index="1">
@@ -221,6 +341,9 @@
 				</div>
 			</div>
 		</div>
+		<div class="footer">
+			<p class="credit">Lovis et al. (2011)</p>
+		</div>
 	</section>
 	<section data-auto-animate>
 		<p>\(R'_{HK}\)<p>
@@ -230,15 +353,20 @@
 		<div class="multiCol">
 			<div class="col" style="vertical-align:middle">
 				\[
-					\begin{aligned}
-						R'_{HK} &= \lambda C_{cf}S - R_{phot} \\
-						\lambda &\equiv 1.887\times 10^{-4}
-					\end{aligned}
+					\small{
+						\begin{aligned}
+							R'_{HK} &= \lambda C_{cf}S - R_{phot} \\
+							\lambda &\equiv 1.887\times 10^{-4}
+						\end{aligned}
+					}
 				\]
 			</div>
 			<div class="col">
 				<p style="display: list-item;">Bolometric Flux Normalized Transformation of S-Index</p>
 			</div>
+		</div>
+		<div class="footer">
+			<p class="credit">Astudillo-Defru et al. (2017)</p>
 		</div>
 	</section>
 	<section>
@@ -278,6 +406,9 @@
 				<img src="static/imgs/MEarth.png" alt="MEarth Logo" width=207 height=207>	
 			</div>
 		</div>
+		<div class="footer">
+			<p class="credit">Berta et al. (2012), Newton et al. (2016)</p>
+		</div>
 	</section>
 	<section data-auto-animate>
 		<p>MIKE Observations</p>
@@ -295,6 +426,9 @@
 				<p class="listParLeft">Background Subtracted, Blaze Corrected, and Wavelength Calibrated</p> 
 				<p class="listParLeft" style="color:#545454">All Spectra Shifted to the Rest Frame</p> 
 			</div>
+		</div>
+		<div class="footer">
+			<p class="credit">Bernstien et al. (2003), Kelson et al. (2000), Kelson (2003)</p>
 		</div>
 	</section>
 </section>
@@ -329,7 +463,42 @@
 		</div>
 	</section>
 	<section>
+		<p> Astudillo-Defru et al. (2017) Rotation-Activity Relation</p>
+		<img src="static/imgs/ADetal2017RotActivity.png" alt="AD RotationActivityRelation" width=900 height=500>
+		<div class="footer">
+			<p class="credit">Figure 6, Astudillo-Defru et al. (2017)</p>
+		</div>
+	</section>
+	<section>
 		<img src="static/imgs/RpHKvsR0.png" alt="RotationActivityRelation" width=800 height=600>
+	</section>
+	<section>
+	<div class="slideTitle">Traced through \(L_{X}/L_{bol}\)</div>
+	<div class="multiCol">
+		<div class="col">
+			<img src="static/imgs/RpHKvsR0.png" alt="RotationActivityRelation" width=400 height=300>
+		</div>
+		<div class="col">
+			<img src="static/imgs/Magauddaetal2020RotActivity.png" alt="Lx/Lbol relation" width=400 height=300>
+		</div>
+	</div>
+	<div class="footer">
+		<p class="credit">Figure 8, Magaudda et al. (2020)</p>
+	</div>	
+	</section>
+	<section>
+	<div class="slideTitle">Traced through \(L_{X}/L_{bol}\)</div>
+	<div class="multiCol">
+		<div class="col">
+			<img src="static/imgs/RpHKvsR0_circle.png" alt="RotationActivityRelation" width=400 height=300>
+		</div>
+		<div class="col">
+			<img src="static/imgs/Magauddaetal2020RotActivity_circle.png" alt="Lx/Lbol relation" width=400 height=300>
+		</div>
+	</div>
+	<div class="footer">
+		<p class="credit">Figure 8, Magaudda et al. (2020)</p>
+	</div>	
 	</section>
 </section>
 
