Added Final Slides

--- a/static/html/slides.html
+++ b/static/html/slides.html
@@ -8,9 +8,8 @@
 	<div class='multiCol'>
 		<div class='col'>
 			<ul>
-				<li>Background</li>
+				<li>Background & Analysis</li>
 				<li>Observations and Data</li>
-				<li>Analysis</li>
 				<li>Results</li>
 			</ul>
 		</div>
@@ -22,9 +21,8 @@
 	<div class='multiCol'>
 		<div class='col'>
 			<ul>
-				<li>Background</li>
+				<li>Background & Analysis</li>
 				<li style="opacity: 20%">Observations and Data</li>
-				<li style="opacity: 20%">Analysis</li>
 				<li style="opacity: 20%">Results</li>
 			</ul>
 		</div>
@@ -380,9 +378,8 @@
 	<div class='multiCol'>
 		<div class='col'>
 			<ul>
-				<li style="opacity: 20%">Background</li>
+				<li style="opacity: 20%">Background & Analysis</li>
 				<li style="opacity: 100%">Observations and Data</li>
-				<li style="opacity: 20%">Analysis</li>
 				<li style="opacity: 20%">Results</li>
 			</ul>
 		</div>
@@ -438,10 +435,9 @@
 	<div class='multiCol'>
 		<div class='col'>
 			<ul>
-				<li style="opacity: 20%">Background</li>
+				<li style="opacity: 20%">Background & Analysis</li>
 				<li style="opacity: 20%">Observations and Data</li>
-				<li style="opacity: 100%">Analysis</li>
-				<li style="opacity: 20%">Results</li>
+				<li style="opacity: 100%">Results</li>
 			</ul>
 		</div>
 	</div>
@@ -502,4 +498,40 @@
 	</section>
 </section>
 
-<section>Conclusion</section>
+<section>
+	<section data-auto-animate>
+		<div class="slideTitle" data-id="title">Conclusion</div>
+	</section>
+	<section data-auto-animate>
+		<div class="slideTitle" data-id="title">Conclusion</div>
+		<div class="multiCol">
+			<div class="col">
+				<p class="listParLeft">Doubled the Number of M-dwarfs with measured \(R'_{HK}\) and \(P_{rot}\) values.</p>
+				<p class="fragment listParLeft">Strengthening constraints when infering \(P_{rot}\)</p>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="slideTitle">With Thanks To.</div>
+		<p class="listParLeft" style="text-align:left">Dr. Elisabeth Newton</p>
+		<p class="listParLeft" style="text-align:left">Dr. Brian Charboyer</p>
+		<p class="listParLeft" style="text-align:left">Dr. John Thorstenton</p>
+	</section>
+</section>
+<section>
+	<section>
+		?
+	</section>
+	<section>
+		<img src="static/imgs/B2020vsAD2016_Masses.png" alt="Mass Distribution" width=800 height=600>
+	</section>
+	<section>
+		<div class="multiCol">
+			<div class="col" style="vertical-align:middle">
+				<div class="rotate90">
+					<img src="static/imgs/11075025-3421003.png" alt="Example Spectra" width=300, height=800>
+				</div>
+			</div>
+		</div>
+	</section>
+</section>
