--- a/static/html/slides.html
+++ b/static/html/slides.html
@@ -175,7 +175,7 @@
 		The <span class="spanEmph">Rotation-Activity</span> Relation
 	</section>
 	<section>
-		The motion of a chage packets seeds the generation of a magnetic field
+		The motion of a charge packets seeds the generation of a magnetic field
 	</section>
 	<section data-auto-animate>
 		<img data-id="rotfigure" src="static/imgs/SimpleRotAct.png" alt="Simple Rotation Activity Relation" width=857 height=600>	
