--- a/static/html/slides.html
+++ b/static/html/slides.html
@@ -1,5 +1,5 @@
 <section>
-	<p>The Rotation-Activity Relation of 50 Spectroscopically Identified M-Dwarfs from MEarth</p>
+	<p>The Ca II H&K Rotation-Activity Relation in 50 early-to-late type M-Dwarfs</p>
 	<p style="font-size: 50%"> Thomas M. Boudreaux & Elisabeth R. Newton</p>
 </section>
 
