Added Reference Slide and extra backup slide

--- a/static/html/slides.html
+++ b/static/html/slides.html
@@ -1,6 +1,11 @@
 <section>
-	<p>The Ca II H&K Rotation-Activity Relation in 50 early-to-late type M-Dwarfs</p>
-	<p style="font-size: 50%"> Thomas M. Boudreaux & Elisabeth R. Newton</p>
+	<div id="title">
+		<p>The Ca II H&K Rotation-Activity Relation in 50 early-to-late type M-Dwarfs</p>
+		<p style="font-size: 50%"> Thomas M. Boudreaux & Elisabeth R. Newton</p>
+	</div>
+	<!-- <div class="footer"> -->
+	<!-- 	<img src="static/imgs/LonePine.png" alt="Lone Pine" width=25 height=50> -->
+	<!-- </div> -->
 </section>
 
 <section data-auto-animate>
@@ -558,4 +563,31 @@
 			</div>
 		</div>
 	</section>
+	<section>
+		<img src="static/imgs/SingleHemisphereM-DwarfSolutions.png" alt="Single Hemisphere Dynamos" width=1000 height=600>
+		<div class="footer">
+			<p class="credit">Brown et al. 2020</p>
+		</div>
+	</section>
+</section>
+<section>
+	<div class="slideTitle">
+	References
+	</div>
+	<div class="slideContent" id="bib" style="text-align:left; font-size:11px; margin:0; padding:0">
+		<p class="listParLeft">Parker, E.N., 1955. Hydromagnetic dynamo models. The Astrophysical Journal, 122, p.293.</p>
+		<p class="listParLeft">Kelson, D. D., Illingworth, G. D., van Dokkum, P. G., &Franx, M. 2000, ApJ, 531, 159</p>
+		<p class="listParLeft">Kelson, D. D. 2003, PASP, 115, 688</p>
+		<p class="listParLeft">Bernstein, R., Shectman, S. A., Gunnels, S. M., Mochnacki,S., & Athey, A. E. 2003, in Society of Photo-OpticalInstrumentation Engineers (SPIE) Conference Series,Vol. 4841, Proc. SPIE, ed. M. Iye & A. F. M. Moorwood,1694–1704</p>
+		<p class="listParLeft">Hilton, E.J., Hawley, S., West, A.A. and Kowalski, A., 2009, February. M Dwarf Flares from Time‐Resolved SDSS Spectra. In AIP Conference Proceedings (Vol. 1094, No. 1, pp. 652-655). American Institute of Physics.</p>
+		<p class="listParLeft">Lovis, C., Dumusque, X., Santos, N.C., Bouchy, F., Mayor, M., Pepe, F., Queloz, D., Ségransan, D. and Udry, S., 2011. The HARPS search for southern extra-solar planets. XXXI. Magnetic activity cycles in solar-type stars: statistics and impact on precise radial velocities. arXiv preprint arXiv:1107.5325.</p>
+		<p class="listParLeft">Berta, Z.K., Irwin, J., Charbonneau, D., Burke, C.J. and Falco, E.E., 2012. Transit detection in the MEarth survey of nearby M dwarfs: bridging the clean-first, search-later divide. The Astronomical Journal, 144(5), p.145.</p>
+		<p class="listParLeft">Hathaway,, D.H., 2014. The Solar Dynamo. Available at: https://solarscience.msfc.nasa.gov/dynamo.shtml [Accessed September 1, 2020]. </p>
+		<p class="listParLeft">Davenport, J.R., Hebb, L. and Hawley, S.L., 2015. Detecting differential rotation and starspot evolution on the M dwarf GJ 1243 with Kepler. The Astrophysical Journal, 806(2), p.212.</p>
+		<p class="listParLeft">Newton, E.R., Irwin, J., Charbonneau, D., Berta-Thompson, Z.K., Dittmann, J.A. and West, A.A., 2016. The rotation and galactic kinematics of mid M dwarfs in the solar neighborhood. The Astrophysical Journal, 821(2), p.93.</p>
+		<p class="listParLeft">Astudillo-Defru, N., Delfosse, X., Bonfils, X., Forveille, T., Lovis, C. and Rameau, J., 2017. Magnetic activity in the HARPS M dwarf sample-The rotation-activity relationship for very low-mass stars through R'HK. Astronomy & Astrophysics, 600, p.A13.</p>
+		<p class="listParLeft">Wright, N.J., Newton, E.R., Williams, P.K., Drake, J.J. and Yadav, R.K., 2018. The stellar rotation–activity relationship in fully convective M dwarfs. Monthly Notices of the Royal Astronomical Society, 479(2), pp.2351-2360.</p>
+		<p class="listParLeft">Magaudda, E., Stelzer, B., Covey, K.R., Raetz, S., Matt, S.P. and Scholz, A., 2020. Relation of X-ray activity and rotation in M dwarfs and predicted time-evolution of the X-ray luminosity. arXiv preprint arXiv:2004.02904.</p>
+		<p class="listParLeft">Brown, B.P., Oishi, J.S., Vasil, G.M., Lecoanet, D. and Burns, K.J., 2020. Single-hemisphere dynamos in M-dwarf stars. arXiv preprint arXiv:2008.02362.</p>
+	</div>
 </section>
