--- a/static/html/slides.html
+++ b/static/html/slides.html
@@ -57,7 +57,7 @@
 		<div class="slideEmph" style="text-align:left">M-dwarfs have excess Magnetic Activity</div>
 		<div class="multiCol">
 			<div class="col">
-				<p class="fragment listParLeft" data-fragment-index="1">Excess Flairing (X-Ray Flux)</p> 
+				<p class="fragment listParLeft" data-fragment-index="1">Excess Flaring (X-Ray Flux)</p> 
 				<p class="fragment listParLeft" data-fragment-index="2">Non-thermal emission (Ca II H&K)</p>
 				<p class="fragment listParLeft" data-fragment-index="3">Direct Measurments (Zeeman Broadening)</p>
 			</div>
@@ -442,9 +442,9 @@
 		<p>MIKE Observations</p>
 		<div class="multiCol">
 			<div class="col">
-				<p class="listParLeft"> High Resolution Echell Spectrograph</p>
+				<p class="listParLeft"> High Resolution Echelle Spectrograph</p>
 				<p class="listParLeft" style="color:#545454"> Blue (335-500 nm) and red arms (490-950 nm)</p>
-				<p class="listParLeft"> Resolution ~ 85000</p>
+				<p class="listParLeft"> Resolution ~ 40000</p>
 			</div>
 			<div class="fragment col" data-fragment-index="2">
 				<p class="listParLeft" style="color:#545454">Data Reduced With <code>CarPy</code></p> 
